# deneme

./: .clangd  CMakeLists.txt  README.md  compile_commands.json  controlpanel.cpp  controlpanel.h  geo.h  main.cpp  mainwindow.cpp  mainwindow.h  mapwidget.cpp  mapwidget.h  sidebar.cpp  sidebar.h
marble-include/: MarbleWidget.h
